workshop/part_4/deployment-and-service-bis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-other-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-other-app
  template:
    metadata:
      labels:
        app: my-other-app
    spec:
      containers:
      - name: my-other-app
        image: graillus/workshop-kubernetes:app-v1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-other-app
spec:
  selector:
    app: my-other-app
  ports:
  - port: 8080
    nodePort: 31081
    targetPort: 3000
    protocol: TCP
  type: NodePort
