workshop/part_4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  selector:
    app: my-app
  ports:
  - port: 8080
    nodePort: 31080
    targetPort: 3000
    protocol: TCP
  type: NodePort
